# sol-parser-sdk-python

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
examples/: meteora_damm_grpc.py  multi_protocol_grpc.py  parse_tx_by_signature.py  pumpfun_quick_test.py  pumpfun_trade_filter.py  pumpfun_with_metrics.py  pumpswap_low_latency.py  pumpswap_with_metrics.py  rust_example_utils.py
scripts/: bench_parser.py  gen_golden_rust.sh
sol_parser/: __init__.py  account_dispatcher.py  accounts.py  check_migration.py  clock.py  dex_parsers.py  entries_decode.py  env_config.py  event_types.py  grpc_client.py  grpc_instruction_parser.py  grpc_types.py  inner_instruction_parser.py  instr_account_utils.py  instructions.py  json_util.py  merger.py  parser.py  pumpfun_fee_enrich.py  rpc_parser.py  rust_api_inventory.py  rust_event_json.py  shredstream_client.py  shredstream_pb2.py  shredstream_pb2_grpc.py  shredstream_pumpfun.py  u128_parity.py  verify_discriminators.py
sol_parser/account_fillers/: __init__.py  bonk.py  meteora.py  orca.py  pumpfun.py  pumpswap.py  raydium.py
sol_parser/accounts/: __init__.py  rpc_wallet.py  utils.py
sol_parser/common/: __init__.py
sol_parser/grpc/: __init__.py  geyser_connect.py  subscribe_builder.py  transaction_meta.py
sol_parser/instr/: __init__.py
sol_parser/logs/: __init__.py
tests/: test_golden.py  test_imports_and_inner.py
tests/fixtures/: golden_parse_log.json
