[project]
name = "sol-parser-sdk-python"
version = "0.3.0"
description = "Solana DEX program log parsing (Python, aligned with this repo’s TS/Go)"
requires-python = ">=3.10"
dependencies = ["base58>=2.0", "grpcio>=1.64.0", "grpcio-tools>=1.64.0"]

[project.scripts]
verify-program-log-discriminators = "sol_parser.verify_discriminators:main"
sol-parser-check-migration = "sol_parser.check_migration:main"
sol-parser-verify-u128 = "sol_parser.u128_parity:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sol_parser*"]
